# ShortenerAPI

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/handlers/: code_handler.rs  mod.rs
src/helpers/: common.rs
src/structs/: common.rs  data_document.rs  mod.rs
