[package]
name = "shortener_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
bson = "2.9.0"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "2.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
